[gd_scene load_steps=42 format=3 uid="uid://dcifbpe8tn1uf"]

[ext_resource type="Script" uid="uid://cpfmollh1xmdd" path="res://rooms/main/main.gd" id="1_4ufej"]
[ext_resource type="PackedScene" uid="uid://dwi7bdg27wpbr" path="res://wizard/Wizard.tscn" id="1_28m1h"]
[ext_resource type="PackedScene" uid="uid://bykkx8hfl6i86" path="res://ui/interface.tscn" id="2_353kp"]
[ext_resource type="PackedScene" uid="uid://cpn613n0k4ls1" path="res://wizard/time_control/time_control_manager.tscn" id="2_mee6x"]
[ext_resource type="Script" uid="uid://bvgi5hq7cq5gn" path="res://wizard/camera_2d.gd" id="3_tm1hv"]
[ext_resource type="PackedScene" uid="uid://db8l8qbcv46v7" path="res://rooms/level_manager/level_manager.tscn" id="4_353kp"]
[ext_resource type="AudioStream" uid="uid://d1b50bli2opql" path="res://enemies/forest/boss/boss_clock_theme.mp3" id="5_mee6x"]
[ext_resource type="PackedScene" uid="uid://chq2r7qj02k12" path="res://enemies/forest/boss/evil_clock_boss.tscn" id="6_w8gtq"]
[ext_resource type="Texture2D" uid="uid://bjnrqjaiw5i2q" path="res://enemies/forest/boss/boss_healthbar.png" id="9_v24id"]
[ext_resource type="Texture2D" uid="uid://bj2ajml1ysvyo" path="res://enemies/forest/boss/boss_healthbar_temp.png" id="10_jgkow"]
[ext_resource type="Texture2D" uid="uid://bg3nv3eopgnhl" path="res://rooms/main/bars.png" id="10_m3omd"]
[ext_resource type="Texture2D" uid="uid://b7gnb8j2tww02" path="res://enemies/forest/boss/boss_health_icon.png" id="11_23j7k"]
[ext_resource type="Texture2D" uid="uid://1xv5n2pykspq" path="res://enemies/forest/boss/boss_healthbar_empty.png" id="12_pbnns"]
[ext_resource type="PackedScene" uid="uid://dfetviixmo6rp" path="res://rooms/main/treasure.tscn" id="13_st04a"]
[ext_resource type="PackedScene" uid="uid://c88ax48do1k7w" path="res://rooms/main/forest.tscn" id="15_353kp"]
[ext_resource type="AudioStream" uid="uid://bx35b5hbq7fil" path="res://rooms/main/fx_grid_up.mp3" id="16_1war5"]
[ext_resource type="PackedScene" uid="uid://dx6ah8cjdrku2" path="res://rooms/main/shadow.tscn" id="17_w8gtq"]
[ext_resource type="Script" path="res://rooms/main/scene_changer_main.gd" id="19_4j2le"]
[ext_resource type="PackedScene" uid="uid://dj3g4s7hfeffe" path="res://rooms/shop/shop.tscn" id="20_h78s4"]
[ext_resource type="Texture2D" uid="uid://unkwqoaq77pb" path="res://ui/dark_circle.png" id="22_ayxu2"]
[ext_resource type="AudioStream" uid="uid://c2ch4bxq7gjp1" path="res://rooms/main/main_theme.mp3" id="29_tm1hv"]

[sub_resource type="GDScript" id="GDScript_353kp"]
script/source = "extends StaticBody2D
@export var scene_changer: Area2D
@export var entrance_anim: AnimatedSprite2D
@export var closed_collision: CollisionShape2D
func _ready() -> void:
	SignalBus.need_shop_closed.connect(close_shop)
	SignalBus.need_shop_opened.connect(open_shop)
func open_shop():
	PhysicsServer2D.set_active(true)
	%OpenCloseAudio.play()
	scene_changer.monitoring = true
	entrance_anim.play(\"open\")
	closed_collision.disabled =true
func close_shop():
	PhysicsServer2D.set_active(true)	
	%OpenCloseAudio.play()
	scene_changer.monitoring = false
	entrance_anim.play(\"close\")
	closed_collision.disabled =false
"

[sub_resource type="AtlasTexture" id="AtlasTexture_wewfl"]
atlas = ExtResource("10_m3omd")
region = Rect2(0, 0, 30, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4joc"]
atlas = ExtResource("10_m3omd")
region = Rect2(30, 0, 30, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7l0b"]
atlas = ExtResource("10_m3omd")
region = Rect2(60, 0, 30, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayxu2"]
atlas = ExtResource("10_m3omd")
region = Rect2(90, 0, 30, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgttg"]
atlas = ExtResource("10_m3omd")
region = Rect2(120, 0, 30, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_npqg4"]
atlas = ExtResource("10_m3omd")
region = Rect2(150, 0, 30, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4mwt"]
atlas = ExtResource("10_m3omd")
region = Rect2(150, 0, 30, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_q87bq"]
atlas = ExtResource("10_m3omd")
region = Rect2(120, 0, 30, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehthk"]
atlas = ExtResource("10_m3omd")
region = Rect2(90, 0, 30, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_qw8mo"]
atlas = ExtResource("10_m3omd")
region = Rect2(60, 0, 30, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3srb"]
atlas = ExtResource("10_m3omd")
region = Rect2(30, 0, 30, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_51h7d"]
atlas = ExtResource("10_m3omd")
region = Rect2(0, 0, 30, 27)

[sub_resource type="SpriteFrames" id="SpriteFrames_wewfl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wewfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4joc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7l0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayxu2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgttg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npqg4")
}],
"loop": false,
"name": &"close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4mwt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q87bq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehthk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qw8mo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3srb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51h7d")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aatvm"]
size = Vector2(144.056, 25.7853)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ndgev"]
size = Vector2(62, 14.25)

[sub_resource type="Animation" id="Animation_23j7k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Treasure:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(575, 309)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Treasure_shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_v2j20"]
resource_name = "crystal"
length = 2.0
loop_mode = 2
step = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Treasure:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1137.6, 1197.57), Vector2(1137.6, 1185), Vector2(1137.6, 1197.57)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Treasure_shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(0.679998, 0.733553), Vector2(0.8, 0.8)]
}

[sub_resource type="Animation" id="Animation_jgkow"]
resource_name = "ending"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.98, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.458405, 0.458405, 0.458405, 1), Color(0.122252, 0.122252, 0.122252, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pbnns"]
_data = {
&"RESET": SubResource("Animation_23j7k"),
&"crystal": SubResource("Animation_v2j20"),
&"ending": SubResource("Animation_jgkow")
}

[node name="Forest" type="Node2D" node_paths=PackedStringArray("dialogs") groups=["level"]]
process_mode = 1
y_sort_enabled = true
script = ExtResource("1_4ufej")
dialogs = NodePath("Interface/Dialogs")
metadata/_edit_horizontal_guides_ = [-2.0]

[node name="Location" parent="." instance=ExtResource("15_353kp")]
y_sort_enabled = true
position = Vector2(0, 7)

[node name="Player" parent="." node_paths=PackedStringArray("joystick", "spell_joystick", "healthbar") groups=["player"] instance=ExtResource("1_28m1h")]
position = Vector2(1140, 1332)
collision_layer = 1
joystick = NodePath("../Interface/Joysticks/Joystick")
spell_joystick = NodePath("../Interface/Joysticks/SpellJoystick")
healthbar = NodePath("../Interface/ProgressBars/Health")

[node name="CameraTransform" type="RemoteTransform2D" parent="Player"]
position = Vector2(4.03308, -56)
scale = Vector2(17.9317, 472.044)
remote_path = NodePath("../../Camera2D")

[node name="LevelManager" parent="." node_paths=PackedStringArray("root_node", "treasure", "player", "level_progress", "stage_completed", "scene_changer", "boss_healthbar", "entrance_anim") instance=ExtResource("4_353kp")]
root_node = NodePath("..")
treasure = NodePath("../Treasure")
player = NodePath("../Player")
level_progress = NodePath("../Interface/ProgressBars/LevelProgress")
boss_level = 5
boss_track = ExtResource("5_mee6x")
stage_completed = NodePath("../Interface/ProgressBars/StageCompleted")
scene_changer = NodePath("../Entrance_shop/SceneChanger")
boss_healthbar = NodePath("../Interface/ProgressBars/BossHealth")
entrance_anim = NodePath("../Entrance_shop/Entrance_anim")
boss_scene = ExtResource("6_w8gtq")

[node name="Spawner" type="Node2D" parent="LevelManager"]
position = Vector2(3179, 1178)

[node name="Spawner2" type="Node2D" parent="LevelManager"]
position = Vector2(1164, 2410)

[node name="Spawner4" type="Node2D" parent="LevelManager"]
position = Vector2(-1022, 1240)

[node name="TimeControlManager" parent="." node_paths=PackedStringArray("ui", "darkness_falling", "stop_pressed_cooldown", "stop_audio", "restart_ui", "time_stop_screen_fx", "dialogs", "player", "healthbar", "inventory", "entrance", "treasure", "stamina", "stamina_timer", "restart_button", "ring_effect") instance=ExtResource("2_mee6x")]
unique_name_in_owner = true
ui = NodePath("../Interface")
darkness_falling = NodePath("../DarknessFalling")
stop_pressed_cooldown = NodePath("../Player/StopPressedCooldown")
stop_audio = NodePath("../Interface/Timers&sound/TimeStopSound")
restart_ui = NodePath("../Interface/TimeControl/RestartUI")
time_stop_screen_fx = NodePath("../Interface/TimeStopScreenFX")
dialogs = NodePath("../Interface/Dialogs")
player = NodePath("../Player")
healthbar = NodePath("../Interface/ProgressBars/Health")
inventory = NodePath("../Interface/Magic/InventoryUI")
entrance = NodePath("../Entrances/any")
treasure = NodePath("../Treasure")
stamina = NodePath("../Interface/ProgressBars/Stamina")
stamina_timer = NodePath("../Interface/Timers&sound/Stamina_timer")
restart_button = NodePath("../Interface/TimeControl/RestartUI/RestartButton")
ring_effect = NodePath("../Player/RingAnimation")

[node name="Interface" parent="." instance=ExtResource("2_353kp")]
unique_name_in_owner = true

[node name="TimeStopScreenFX" parent="Interface" index="0"]
visible = false
offset_left = -1466.0
offset_right = 2722.0
offset_bottom = 2369.0

[node name="BossHealth" parent="Interface/ProgressBars" index="2"]
bar_texture_progress = ExtResource("9_v24id")
temp_texture_progress = ExtResource("10_jgkow")
icon = ExtResource("11_23j7k")

[node name="Icon" parent="Interface/ProgressBars/BossHealth/HBoxContainer" index="0"]
texture = ExtResource("11_23j7k")

[node name="TempHealthBar" parent="Interface/ProgressBars/BossHealth/HBoxContainer" index="1"]
max_value = 4000.0
step = 100.0
value = 4000.0
texture_under = ExtResource("12_pbnns")

[node name="Bar" parent="Interface/ProgressBars/BossHealth/HBoxContainer/TempHealthBar" index="0"]
max_value = 400.0
step = 40.0
value = 400.0

[node name="RichTextLabel" parent="Interface/Dialogs/GridContainer" index="2" node_paths=PackedStringArray("root_node", "spell_joystick", "time_manager")]
root_node = NodePath("../../../..")
spell_joystick = NodePath("../../../Joysticks/SpellJoystick")
time_manager = NodePath("../../../../TimeControlManager")

[node name="Camera2D" type="Camera2D" parent="."]
process_mode = 3
position = Vector2(1144.03, 1276)
scale = Vector2(17.9317, 472.044)
limit_left = -1165
limit_top = 155
limit_right = 3315
limit_bottom = 2510
limit_smoothed = true
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.1
drag_top_margin = 0.1
drag_right_margin = 0.1
drag_bottom_margin = 0.1
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource("3_tm1hv")
level_bottom = 2510
level_top = 155
level_left = -1165
level_right = 3315
shop_bottom = -122
shop_top = -1250
shop_right = 1944

[node name="Treasure_shadow" parent="." instance=ExtResource("17_w8gtq")]
z_index = 1
y_sort_enabled = false
position = Vector2(1138, 1181)
offset = Vector2(0, 100)

[node name="Treasure" parent="." node_paths=PackedStringArray("restart_ui") groups=["treasure"] instance=ExtResource("13_st04a")]
unique_name_in_owner = true
position = Vector2(575, 309)
scale = Vector2(3, 3)
restart_ui = NodePath("../Interface/TimeControl/RestartUI")

[node name="Entrances" type="Node2D" parent="."]
position = Vector2(651, 706)

[node name="any" type="Marker2D" parent="Entrances"]
position = Vector2(646, 280)

[node name="MainMusic" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("29_tm1hv")
autoplay = true
bus = &"Music"

[node name="Entrance_shop" type="StaticBody2D" parent="." node_paths=PackedStringArray("scene_changer", "entrance_anim", "closed_collision")]
process_mode = 3
y_sort_enabled = true
position = Vector2(1172, 688)
scale = Vector2(3, 4)
collision_layer = 9
script = SubResource("GDScript_353kp")
scene_changer = NodePath("SceneChanger")
entrance_anim = NodePath("Entrance_anim")
closed_collision = NodePath("Closed/ClosedCollision")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Entrance_shop"]
position = Vector2(-0.415588, -16.8228)
scale = Vector2(1.17118, 0.73971)
build_mode = 1
polygon = PackedVector2Array(29.3854, -45.1896, -35.5064, -44.5137, -35.5064, 26.7981, -24.4065, 29.1639, -21.5604, 0.436386, 17.4316, 1.11234, 19.4239, 25.1082, 31.0931, 24.4323)

[node name="Entrance_anim" type="AnimatedSprite2D" parent="Entrance_shop"]
position = Vector2(-2.16667, -2.1911)
scale = Vector2(1.3, -0.893251)
sprite_frames = SubResource("SpriteFrames_wewfl")
animation = &"open"

[node name="SceneChanger" type="Area2D" parent="Entrance_shop" node_paths=PackedStringArray("spell_joystick", "save_button", "heal", "shop", "time_control_manager", "root_node")]
process_mode = 3
position = Vector2(-9.66668, -30)
scale = Vector2(1.12225, 0.365714)
script = ExtResource("19_4j2le")
spell_joystick = NodePath("../../Interface/Joysticks/SpellJoystick")
save_button = NodePath("../../Interface/TimeControl/Saving")
heal = NodePath("../../Interface/Support/Heal")
shop = NodePath("../../Shop")
time_control_manager = NodePath("../../TimeControlManager")
root_node = NodePath("../..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entrance_shop/SceneChanger"]
process_mode = 3
position = Vector2(5.79193, 79.3926)
scale = Vector2(0.2, 1)
shape = SubResource("RectangleShape2D_aatvm")

[node name="Closed" type="StaticBody2D" parent="Entrance_shop"]
process_mode = 3
disable_mode = 1
collision_layer = 40
collision_mask = 9

[node name="ClosedCollision" type="CollisionShape2D" parent="Entrance_shop/Closed"]
process_mode = 3
position = Vector2(-2.66667, -2.25)
shape = SubResource("RectangleShape2D_ndgev")

[node name="OpenCloseAudio" type="AudioStreamPlayer2D" parent="Entrance_shop"]
unique_name_in_owner = true
stream = ExtResource("16_1war5")

[node name="DarknessFalling" type="ColorRect" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
z_index = 5
offset_left = 587.0
offset_top = 331.0
offset_right = 1741.0
offset_bottom = 985.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(577, 327)
color = Color(0, 0, 0, 1)

[node name="Barrier" type="StaticBody2D" parent="."]
position = Vector2(0, 33)
scale = Vector2(2, 1.8)
collision_layer = 8
collision_mask = 17

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Barrier"]
position = Vector2(-422.985, 176.889)
scale = Vector2(1.79531, 1.8003)
polygon = PackedVector2Array(1198.5, 670.222, 1166, 668.556, 1161.35, 52.6455, 804.869, 52.0283, 802.919, 148.309, 743.876, 147.074, 737.749, 46.1651, 643.893, 44.6222, 641.944, 82.5788, 593.206, 82.5788, 594.041, 39.6847, 529.707, 44.005, 519.68, 81.9616, 477.069, 81.9616, 473.727, 50.4854, 381.264, 52.0283, 380.707, 143.68, 318.6, 142.137, 316.929, 49.8682, -91.9147, 43.3878, -98.0418, 666.124, 1191, 671, 1159, 736, -125.892, 703.772, -138.425, -73.2594, 522.552, -58.2955, 1204, -45)

[node name="Shop" parent="." instance=ExtResource("20_h78s4")]
unique_name_in_owner = true
z_index = -1
position = Vector2(10, -1317)
scale = Vector2(1.68507, 1.95292)

[node name="SceneChanger" parent="Shop" index="1" node_paths=PackedStringArray("spell_joystick", "save_button", "heal", "root_node", "time_control_manager")]
spell_joystick = NodePath("../../Interface/Joysticks/SpellJoystick")
save_button = NodePath("../../Interface/TimeControl/Saving")
heal = NodePath("../../Interface/Support/Heal")
root_node = NodePath("..")
time_control_manager = NodePath("../../TimeControlManager")

[node name="StopVec" type="RayCast2D" parent="."]
process_mode = 3
scale = Vector2(10, 1)
target_position = Vector2(0, 15)
collision_mask = 104

[node name="Main_animations" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pbnns")
}
autoplay = "crystal"

[node name="Sprite2D" type="TextureRect" parent="."]
visible = false
z_index = 30
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1159.0
offset_top = 583.0
offset_right = 1223.0
offset_bottom = 647.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.636047, 0.636047)
pivot_offset = Vector2(32, 32)
texture = ExtResource("22_ayxu2")

[node name="BossSpawnPosition" type="Marker2D" parent="."]
position = Vector2(3144, 1242)

[connection signal="body_entered" from="Entrance_shop/SceneChanger" to="Entrance_shop/SceneChanger" method="_on_body_entered"]
[connection signal="animation_finished" from="Main_animations" to="." method="_on_ending_animation_finished"]

[editable path="Location"]
[editable path="Location/Location"]
[editable path="Player"]
[editable path="Interface"]
[editable path="Interface/ProgressBars/BossHealth"]
[editable path="Interface/Dialogs"]
[editable path="Shop"]
